# nba26

./: .gitignore  commands.txt  journal.txt  main.py  pyproject.toml  run_nba_pipeline.sh
scripts/: espn_player_map.py  ingest.py  ingest_espn_rosters_to_duckdb.py  make_rosters.py  pull_espn_roster.py  trade_stuff.py  update_snowflake.py
sql/snowflake_tables/: lines_table.sql
sqlmesh/: external_models.yaml
sqlmesh/models/aggs/: player_averages.sql  team_averages.sql
sqlmesh/models/base/: lines_table.sql  players_combined.sql  players_processed.sql  teams_combined.sql  teams_processed.sql
sqlmesh/models/fantasy/: averages.sql  averages_current.sql  averages_last_10.sql  averages_last_10_current.sql  base_stats.sql  base_stats_averages.sql  base_this_season.sql  performance_delta.sql  season_cumulative.sql  season_final.sql  weekly_stats.sql  z_scores_averages.sql  z_scores_averages_last_10.sql  z_scores_cumulative.sql  z_scores_overall_current.sql
sqlmesh/models/raw/: current_season.sql  line_team_mapping.sql  teams_traditional_totals.sql
streamlit/: fantasy_Dashboard.py  first.py
utils/: duckdb_sink.py  logger.py
