[project]
name = "nba26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "snowflake-connector-python[pandas]>=4.0.0",
    "sqlmesh[snowflake]>=0.227.1",
    "urllib3>=2.5.0",
]
